--- a/Ex4/pom.xml
+++ b/Ex4/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Exercise4</artifactId>
+    <artifactId>Ex4</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
